# Astra-core

./: .gitignore  ASTRA_VS_XRAY.md  Cargo.toml  README.md  config.json
.github/workflows/: ci.yml
astra-core-app/: Cargo.toml
astra-core-app-grpc/: Cargo.toml  build.rs
astra-core-app-grpc/proto/: api.proto
astra-core-app-grpc/src/: lib.rs
astra-core-app-log/: Cargo.toml
astra-core-app-log/src/: lib.rs
astra-core-app-reverse/: Cargo.toml
astra-core-app-reverse/src/: lib.rs
astra-core-app/src/: builder.rs  lib.rs
astra-core-browser-dialer/: Cargo.toml
astra-core-browser-dialer/src/: dialer.html  lib.rs
astra-core-buf/: Cargo.toml
astra-core-buf/src/: buffer.rs  copy.rs  io.rs  lib.rs  multi_buffer.rs  pool.rs  reader.rs  writer.rs
astra-core-cli/: Cargo.toml
astra-core-cli/src/: main.rs
astra-core-common/: Cargo.toml
astra-core-common/src/: antireplay.rs  bitmask.rs  cache.rs  cmdarg.rs  ctx.rs  drain.rs  errors.rs  happy_eyeballs.rs  inject.rs  lib.rs  log.rs  ocsp.rs  peer.rs  platform.rs  reflect.rs  retry.rs  signal.rs  singbridge.rs  task.rs  types.rs  units.rs  utils.rs  xudp.rs
astra-core-config/: Cargo.toml
astra-core-config/src/: dns.rs  json_reader.rs  lib.rs  log.rs  policy.rs  protobuf.rs  proxy.rs  router.rs  transport.rs  types.rs
astra-core-crypto/: Cargo.toml
astra-core-crypto/src/: aes.rs  auth.rs  chacha20.rs  chunk.rs  cipher.rs  generator.rs  lib.rs  rand.rs  sha256.rs  stream.rs
astra-core-dispatcher/: Cargo.toml
astra-core-dispatcher/src/: default.rs  lib.rs
astra-core-dns/: Cargo.toml
astra-core-dns/src/: lib.rs
astra-core-finalmask/: Cargo.toml
astra-core-finalmask/src/: lib.rs  manager.rs  mask.rs
astra-core-geodata/: Cargo.toml
astra-core-geodata/src/: download.rs  lib.rs
astra-core-geodata/tests/: integration_test.rs
astra-core-main/: Cargo.toml
astra-core-main/src/: main.rs
astra-core-metrics/: Cargo.toml
astra-core-metrics/src/: lib.rs
astra-core-mux/: Cargo.toml
astra-core-mux/src/: client.rs  frame.rs  io.rs  lib.rs  reader.rs  server.rs  session.rs  writer.rs
astra-core-net/: Cargo.toml
astra-core-net/src/: address.rs  destination.rs  lib.rs  network.rs  port.rs  process.rs
astra-core-observatory/: Cargo.toml
astra-core-observatory/src/: burst.rs  lib.rs
astra-core-policy/: Cargo.toml
astra-core-policy/src/: lib.rs
astra-core-proto/: Cargo.toml
astra-core-proto/src/: headers.rs  id.rs  lib.rs  payload.rs  time.rs  user.rs
astra-core-proxy/: Cargo.toml
astra-core-proxy-blackhole/: Cargo.toml
astra-core-proxy-blackhole/src/: lib.rs
astra-core-proxy-dns/: Cargo.toml
astra-core-proxy-dns/src/: lib.rs
astra-core-proxy-dokodemo/: Cargo.toml
astra-core-proxy-dokodemo/src/: lib.rs
astra-core-proxy-dokodemo/tests/: integration_test.rs
astra-core-proxy-freedom/: Cargo.toml
astra-core-proxy-freedom/src/: lib.rs
astra-core-proxy-http/: Cargo.toml
astra-core-proxy-http/src/: lib.rs  outbound.rs
astra-core-proxy-hysteria/: Cargo.toml
astra-core-proxy-hysteria/src/: lib.rs
astra-core-proxy-loopback/: Cargo.toml
astra-core-proxy-loopback/src/: lib.rs
astra-core-proxy-shadowsocks/: Cargo.toml
astra-core-proxy-shadowsocks-2022/: Cargo.toml
astra-core-proxy-shadowsocks-2022/src/: inbound.rs  lib.rs  outbound.rs  protocol.rs
astra-core-proxy-shadowsocks/src/: config.rs  inbound.rs  lib.rs  outbound.rs  protocol.rs
astra-core-proxy-socks/: Cargo.toml
astra-core-proxy-socks/src/: lib.rs  outbound.rs  protocol.rs
astra-core-proxy-trojan/: Cargo.toml
astra-core-proxy-trojan/src/: config.rs  inbound.rs  lib.rs  outbound.rs  protocol.rs
astra-core-proxy-vless/: Cargo.toml
astra-core-proxy-vless/src/: account.rs  lib.rs  validator.rs
astra-core-proxy-vless/src/encoding/: addons.rs  codec.rs  mod.rs
astra-core-proxy-vless/src/inbound/: inbound.rs
astra-core-proxy-vless/src/outbound/: mod.rs  outbound.rs
astra-core-proxy-vmess/: Cargo.toml
astra-core-proxy-vmess/src/: account.rs  lib.rs
astra-core-proxy-vmess/src/aead/: authid.rs  consts.rs  encrypt.rs  kdf.rs  mod.rs
astra-core-proxy-vmess/src/encoding/: auth.rs  client.rs  commands.rs  encoding.rs  mod.rs  server.rs
astra-core-proxy-vmess/src/inbound/: inbound.rs  mod.rs
astra-core-proxy-vmess/src/outbound/: outbound.rs
astra-core-proxy-wireguard/: Cargo.toml
astra-core-proxy-wireguard/src/: lib.rs
astra-core-proxy/src/: dialer.rs  dispatcher.rs  inbound.rs  lib.rs  outbound.rs  timeout.rs
astra-core-proxyman/: Cargo.toml
astra-core-proxyman/src/: inbound.rs  lib.rs  outbound.rs  proxy_protocol.rs  sockopt.rs  transport.rs
astra-core-routing/: Cargo.toml
astra-core-routing/src/: balancer.rs  context.rs  domain.rs  lib.rs  mask.rs  matcher.rs  range.rs  router.rs  rule.rs  u32_filter.rs  webhook.rs
astra-core-session/: Cargo.toml
astra-core-session/src/: lib.rs
astra-core-sniffing/: Cargo.toml
astra-core-sniffing/src/: lib.rs
astra-core-stats/: Cargo.toml
astra-core-stats/src/: lib.rs  online_map.rs
astra-core-transport/: Cargo.toml
astra-core-transport-grpc/: Cargo.toml  build.rs
astra-core-transport-grpc/proto/: stream.proto
astra-core-transport-grpc/src/: connection.rs  dialer.rs  lib.rs  listener.rs
astra-core-transport-h2/: Cargo.toml
astra-core-transport-h2/src/: config.rs  dialer.rs  lib.rs  listener.rs
astra-core-transport-httpupgrade/: Cargo.toml
astra-core-transport-httpupgrade/src/: config.rs  dialer.rs  lib.rs  listener.rs
astra-core-transport-kcp/: Cargo.toml
astra-core-transport-kcp/src/: config.rs  connection.rs  dialer.rs  io.rs  lib.rs  listener.rs  output.rs  receiving.rs  segment.rs  sending.rs
astra-core-transport-quic/: Cargo.toml
astra-core-transport-quic/src/: config.rs  connection.rs  dialer.rs  lib.rs  listener.rs
astra-core-transport-reality/: Cargo.toml
astra-core-transport-splithttp/: Cargo.toml
astra-core-transport-tls/: Cargo.toml
astra-core-transport-ws/: Cargo.toml
astra-core-tun/: Cargo.toml
astra-core-tun/src/: icmp.rs  (+6 more)
protobuf/: api.proto  geoip.proto  geosite.proto  stream.proto
(+26 files in other folders)
