[workspace]
resolver = "2"
members = [
    "astra-core-buf",
    "astra-core-crypto",
    "astra-core-mux",
    "astra-core-net",
    "astra-core-proto",
    "astra-core-proxy-vless",
    "astra-core-proxy-vmess",
    "astra-core-routing",
    "astra-core-transport-ws",
    "astra-core-config",
    "astra-core-proxy-freedom",
    "astra-core-proxy-dokodemo",
]

[workspace.dependencies]
rand = "0.9"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
aes-gcm = "0.10"
cfb-mode = "0.8"
ctr = "0.9"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
md-5 = "0.10"
uuid = { version = "1", features = ["v4"] }
crc32fast = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

astra-core-buf = { path = "astra-core-buf" }
astra-core-crypto = { path = "astra-core-crypto" }
astra-core-net = { path = "astra-core-net" }
astra-core-proto = { path = "astra-core-proto" }
astra-core-routing = { path = "astra-core-routing" }
astra-core-config = { path = "astra-core-config" }
