[workspace]
resolver = "2"
members = [
    "astra-core-buf",
    "astra-core-crypto",
    "astra-core-policy",
    "astra-core-dns",
    "astra-core-sniffing",
    "astra-core-mux",
    "astra-core-app-reverse",
"astra-core-stats",
"astra-core-app-grpc",
    "astra-core-net",
    "astra-core-proto",
    "astra-core-proxy-vless",
    "astra-core-proxy-vmess",
    "astra-core-routing",
    "astra-core-transport-ws",
    "astra-core-config",
    "astra-core-proxy-freedom",
    "astra-core-proxy-dokodemo",
    "astra-core-session",
    "astra-core-transport",
    "astra-core-proxy",
    "astra-core-dispatcher",
    "astra-core-proxyman",
    "astra-core-app",
    "astra-core-main",
    "astra-core-proxy-socks",
    "astra-core-proxy-http",
    "astra-core-transport-grpc",
    "astra-core-proxy-dns",
    "astra-core-proxy-loopback",
    "astra-core-proxy-blackhole",
    "astra-core-proxy-shadowsocks",
    "astra-core-proxy-shadowsocks-2022",
    "astra-core-proxy-wireguard",
    "astra-core-proxy-trojan",
    "astra-core-transport-httpupgrade", "astra-core-transport-kcp",
    "astra-core-transport-splithttp",
    "astra-core-transport-reality",
"astra-core-transport-quic",
]

[workspace.dependencies]
rand = "0.10"
hex = "0.4"
sha2 = "0.11"
hmac = "0.13"
aes = "0.8"
aes-gcm = "0.10"
cfb-mode = "0.8"
ctr = "0.9"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
md-5 = "0.11"
uuid = { version = "1", features = ["v4"] }
crc32fast = "1"
base64 = "0.22"
ipnetwork = "0.20"
regex = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "0.26"
tonic = "0.14"
prost = "0.14"
tokio-stream = "0.1"
tower = { version = "0.5", default-features = false }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
quinn = "0.11"

astra-core-buf = { path = "astra-core-buf" }
astra-core-crypto = { path = "astra-core-crypto" }
astra-core-net = { path = "astra-core-net" }
astra-core-proto = { path = "astra-core-proto" }
astra-core-routing = { path = "astra-core-routing" }
astra-core-config = { path = "astra-core-config" }
