[package]
name = "astra-core-app"
version = "0.1.0"
edition = "2024"

[dependencies]
astra-core-net = { path = "../astra-core-net" }
astra-core-session = { path = "../astra-core-session" }
astra-core-transport = { path = "../astra-core-transport" }
astra-core-proxy = { path = "../astra-core-proxy" }
astra-core-proxyman = { path = "../astra-core-proxyman" }
astra-core-dispatcher = { path = "../astra-core-dispatcher" }
astra-core-config = { path = "../astra-core-config" }
astra-core-proxy-freedom = { path = "../astra-core-proxy-freedom" }
astra-core-proxy-dokodemo = { path = "../astra-core-proxy-dokodemo" }
astra-core-routing = { path = "../astra-core-routing" }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = "1"
