[package]
name = "astra-core-app"
version = "0.1.0"
edition = "2024"

[dependencies]
astra-core-net = { path = "../astra-core-net" }
astra-core-proto = { path = "../astra-core-proto" }
astra-core-session = { path = "../astra-core-session" }
astra-core-transport = { path = "../astra-core-transport" }
astra-core-proxy = { path = "../astra-core-proxy" }
astra-core-proxyman = { path = "../astra-core-proxyman" }
astra-core-dispatcher = { path = "../astra-core-dispatcher" }
astra-core-config = { path = "../astra-core-config" }
astra-core-policy = { path = "../astra-core-policy" }
astra-core-proxy-freedom = { path = "../astra-core-proxy-freedom" }
astra-core-proxy-dokodemo = { path = "../astra-core-proxy-dokodemo" }
astra-core-proxy-vless = { path = "../astra-core-proxy-vless" }
astra-core-proxy-vmess = { path = "../astra-core-proxy-vmess" }
astra-core-proxy-socks = { path = "../astra-core-proxy-socks" }
astra-core-proxy-http = { path = "../astra-core-proxy-http" }
astra-core-proxy-dns = { path = "../astra-core-proxy-dns" }
astra-core-proxy-loopback = { path = "../astra-core-proxy-loopback" }
astra-core-proxy-wireguard = { path = "../astra-core-proxy-wireguard" }
astra-core-proxy-blackhole = { path = "../astra-core-proxy-blackhole" }
astra-core-proxy-shadowsocks = { path = "../astra-core-proxy-shadowsocks" }
astra-core-proxy-shadowsocks-2022 = { path = "../astra-core-proxy-shadowsocks-2022" }
astra-core-proxy-trojan = { path = "../astra-core-proxy-trojan" }
astra-core-routing = { path = "../astra-core-routing" }
astra-core-dns = { path = "../astra-core-dns" }
astra-core-stats = { path = "../astra-core-stats" }
astra-core-observatory = { path = "../astra-core-observatory" }
astra-core-app-reverse = { path = "../astra-core-app-reverse" }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = "1"
hex = { workspace = true }
base64 = { workspace = true }
