[package]
name = "astra-core-browser-dialer"
version = "0.1.0"
edition = "2024"
description = "Browser-based dialer for circumventing IP blocks"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
uuid = { workspace = true }
base64 = "0.22"
http = "1"
tracing = { workspace = true }
futures-util = "0.3"
