[package]
name = "astra-core-common"
version = "0.1.0"
edition = "2024"
description = "Common utilities for astra-core: antireplay, cache, retry, drain"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
lazy_static = "1.4"
regex-lite = "0.1"
