[package]
name = "astra-core-config"
version = "0.1.0"
edition = "2021"
description = "Xray-core JSON config parser for astra-core"

[dependencies]
serde = { workspace = true }
serde_json = "1"
serde_with = "3"
astra-core-net = { path = "../astra-core-net" }
astra-core-proto = { path = "../astra-core-proto" }
astra-core-routing = { path = "../astra-core-routing" }
tracing = { workspace = true }
