[package]
name = "astra-core-dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
astra-core-net = { path = "../astra-core-net" }
astra-core-session = { path = "../astra-core-session" }
astra-core-transport = { path = "../astra-core-transport" }
astra-core-proxy = { path = "../astra-core-proxy" }
astra-core-routing = { path = "../astra-core-routing" }
tokio = { workspace = true }
tracing = { workspace = true }
