[package]
name = "astra-core-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
serde_json = "1"
serde = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
quinn = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
webpki-roots = { workspace = true }
regex-lite = "0.1"
tracing = { workspace = true }
thiserror = "2"
futures = "0.3"
