[package]
name = "astra-core-geodata"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
