[package]
name = "astra-core-proxy-dokodemo"
version = "0.1.0"
edition = "2024"
description = "Dokodemo-door (generic inbound) handler for astra-core"

[dependencies]
astra-core-net = { path = "../astra-core-net" }
astra-core-proxy = { path = "../astra-core-proxy" }
astra-core-session = { path = "../astra-core-session" }
astra-core-transport = { path = "../astra-core-transport" }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
socket2 = "0.5"

[dev-dependencies]
astra-core-proxy-freedom = { path = "../astra-core-proxy-freedom" }
tokio = { workspace = true }
