[package]
name = "astra-core-proxy-trojan"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

astra-core-net = { path = "../astra-core-net" }
astra-core-proxy = { path = "../astra-core-proxy" }
astra-core-session = { path = "../astra-core-session" }
astra-core-transport = { path = "../astra-core-transport" }
