[package]
name = "astra-core-proxy-vmess"
version = "0.1.0"
edition = "2024"
description = "Astra-core VMess proxy protocol implementation"
license = "MIT"

[dependencies]
astra-core-buf = { workspace = true }
astra-core-crypto = { workspace = true }
astra-core-net = { workspace = true }
astra-core-proto = { workspace = true }
astra-core-routing = { workspace = true }
rand = { workspace = true }
