[package]
name = "astra-core-proxy-vmess"
version = "0.1.0"
edition = "2024"
description = "Astra-core VMess proxy protocol implementation"
license = "MIT"

[dependencies]
astra-core-buf = { workspace = true }
astra-core-crypto = { workspace = true }
astra-core-net = { workspace = true }
astra-core-proto = { workspace = true }
astra-core-proxy = { path = "../astra-core-proxy" }
astra-core-routing = { workspace = true }
astra-core-session = { path = "../astra-core-session" }
astra-core-transport = { path = "../astra-core-transport" }
rand = { workspace = true }
tokio = { workspace = true }
