[package]
name = "astra-core-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
astra-core-net = { path = "../astra-core-net" }
astra-core-session = { path = "../astra-core-session" }
astra-core-transport = { path = "../astra-core-transport" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
